# GoalPad

./: .gitignore  README.md
.kiro/specs/goal-pad/: design.md  requirements.md  tasks.md
be/: env.example  example.py  pyproject.toml
be/app/: ai_service.py  auth.py  main.py  models.py  schemas.py
fe/: package-lock.json  package.json  tailwind.config.js
fe/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
fe/src/app/login/: page.tsx
fe/src/components/: AuthPage.tsx  Dashboard.tsx  EditPlan.tsx  EisenhowerMatrix.tsx  LoadingSpinner.tsx  OnboardingFlow.tsx  Profile.tsx  ProgressTracker.tsx  QuizBomber.tsx  Scheduler.tsx  Sidebar.tsx  StickyNotes.tsx  YouTubePlayer.tsx
fe/src/components/ui/: checkbox.tsx  sidebar.tsx
fe/src/contexts/: AuthContext.tsx
fe/src/lib/: api.ts
fe/src/types/: index.ts
